<resources>
    <string name="app_name">MyTweet</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="signupMessage">sign up to mytweet</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginMessage">Enter your name and password \nYou must be registered.</string>
    <string name="tweetHint">What\'s in your mind?</string>
    <string name="tweet">Tweet</string>
    <string name="selectContact">Select Contact</string>
    <string name="emailTweet">Email Tweet via</string>
    <string name="menuSettings">Settings</string>
    <string name="menuTimeLine">Timeline</string>
    <string name="menuLogout">Logout</string>
    <string name="tweet_report_title">My Latest Tweet</string>
    <string name="newTweet">New Tweet</string>
    <string name="deleteTweet">Delete Tweet</string>
    <string name="clearTimeLine">Clear</string>
    <string name="noTweetsMessage">No tweets to show. Start tweeting to get started !</string>
    <string name="welcome">Welcome to MyTweet. The microblog to use</string>
    <string name="defaultCount">140</string>
    <string name="defaultDate">A Date</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="userName">User Name</string>
    <string name="userNameSummary">What\'s your user name?</string>
    <string name="refresh">Refresh Interval</string>
    <string name="refreshSummary">How frequently should data refresh?</string>
    <string name="updateAccount">Update Account</string>
    <string name="selectImage">Select Image</string>
    <string name="noFollowMessage">No follows yet :(</string>
    <string name="title_map">Map</string>
    <string name="refresh_interval_preference_key">refresh_interval</string>

</resources>
