<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kevin.mytweet.activities.Welcome">

    <Button
        android:id="@+id/welcomeLogin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/welcomeSignup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/border_button"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:padding="10dp"
        android:drawablePadding="15dp"/>

    <Button
        android:id="@+id/welcomeSignup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text= "@string/signup"
        android:background="@drawable/border_button"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_person_add_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="320dp"
        android:layout_height="105dp"
        android:text="@string/welcome"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logoImage"/>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="119dp"
        android:layout_height="106dp"
        app:srcCompat="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/app_name"/>

</android.support.constraint.ConstraintLayout>
