<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tweetUserImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingTop="5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:riv_border_color="#333333"
            app:riv_border_width="1dip"
            app:riv_corner_radius="50dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"/>

        <TextView
            android:id="@+id/tweetUserName"
            android:layout_width="304dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="4dp"
            android:text="@string/userName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tweetUserImage"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/tweetImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailInputLayout"
            app:srcCompat="@drawable/background_activated"/>

        <Button
            android:id="@+id/tweetButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_button"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_create_black_24dp"
            android:padding="10dp"
            android:text="@string/tweet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tweetDate"/>

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_button"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_image_black_24dp"
            android:padding="10dp"
            android:text="@string/selectImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tweetDate"/>

        <Button
            android:id="@+id/selectContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_button"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/ic_contacts_black_24dp"
            android:padding="10dp"
            android:text="@string/selectContact"
            app:layout_constraintBottom_toTopOf="@+id/emailViaButton"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addmap"/>

        <Button
            android:id="@+id/emailViaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/emailTweet"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            android:layout_marginBottom="32dp"
            android:background="@drawable/border_button"
            android:drawableStart="@drawable/ic_contact_mail_black_24dp"
            android:padding="10dp"
            android:drawablePadding="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/charCount"
            android:layout_width="68dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/defaultCount"
            app:layout_constraintRight_toRightOf="@+id/loginEmailInputLayout"
            app:layout_constraintTop_toTopOf="@+id/loginEmailInputLayout"/>

        <TextView
            android:id="@+id/tweetDate"
            android:layout_width="304dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/defaultDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tweetUserImage"
            app:layout_constraintTop_toBottomOf="@+id/tweetUserName"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginEmailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tweetButton">

            <EditText
                android:id="@+id/tweetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/tweetHint"
                android:inputType="textMultiLine"
                android:maxLength="140"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </android.support.design.widget.TextInputLayout>

        <fragment
            android:name="kevin.mytweet.fragments.MapsFragment"
            android:id="@+id/addmap"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tweetImage"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
